--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -21,6 +21,8 @@
           <%= render "favorites/btn", book: book %>
         </td>
         
+        <td>コメント数： <%= book.book_comments.count %></td>
+        
       </tr>
     <% end %>
   </tbody>
