--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -18,7 +18,10 @@
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
           <%#いいね機能%>
-          <td><%= render "favorites/btn", book: book %></td>
+          <td><%= render "favorites/btn", book: @book %></td>
+        
+          <%#コメント機能%>
+          <td>コメント数： <%= @book.book_comments.count %></td>
           
           <% if @book.user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
@@ -27,6 +30,10 @@
           
         </tr>
       </table>
+        <%= render "book_comments/index", book: @book %>
+        <%= render "book_comments/form", book: @book, book_comment: @book_comment %>
+      
+      
     </div>
   </div>
 </div>
