--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -17,7 +17,7 @@
         <td><%= link_to book.title,book %></td>
         <td><%= book.body %></td>
         
-        <td class=<%= "favorite_btn_" + book.id.to_s %> >
+        <td id="favorite_btn_<%= book.id %>">
           <%= render "favorites/btn", book: book %>
         </td>
         
