--- a/app/views/favorites/_btn.html.erb
+++ b/app/views/favorites/_btn.html.erb
@@ -1,13 +1,11 @@
 <% if book.favorited_by?(current_user) %>
-  <p >
     <%= link_to book_favorite_path(book),class:"text-danger",method: :delete , remote: true do %>
-      ♥<%= book.favorites.count %>
+      <i class="fas fa-heart" aria-hidden="true" style="color: red;"></i>
+      <%= book.favorites.count %>
     <% end %>
-  </p>
   <% else %>
-  <p>
     <%= link_to book_favorite_path(book), method: :post , remote: true do %>
-      ♥<%= book.favorites.count %>
+      <i class="fas fa-heart" aria-hidden="true"></i>
+      <%= book.favorites.count %>
     <% end %>
-  </p>
 <% end %>
