--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,9 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <script src="https://kit.fontawesome.com/xxxxxxxxxx.js" crossorigin="anonymous"></script>
+    <%# font_awesameの導入 %>
+    <script src="https://kit.fontawesome.com/9e7b8f8705.js" crossorigin="anonymous"></script>
+    
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
@@ -13,6 +15,12 @@
     <%= render 'layouts/header' %>
       <main>
         <p id="notice"><%= notice %></p>
+        <%# 検索機能%>
+        <div class="d-flex justify-content-center mb-2">
+          <%= render "searches/form" %>
+        </div>
+        
+        
         <%= yield %>
       </main>
     <%= render 'layouts/footer' %>
