--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -15,15 +15,19 @@
             <%= @book.user.name %>
             <% end %>
           </td>
+          
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
+          
           <%#いいね機能%>
            <td id="favorite_btn_<%= @book.id %>">
              <%= render "favorites/btn", book: @book %>
            </td>
         
           <%#コメント機能%>
-          <td>コメント数： <%= @book.book_comments.count %></td>
+          <td id="comment_counter">
+            <%= render "book_comments/counter", book: @book %>
+          </td>
           
           <% if @book.user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
@@ -32,7 +36,10 @@
           
         </tr>
       </table>
-        <%= render "book_comments/index", book: @book %>
+        <div id="comment_index">
+          <%= render "book_comments/index", book: @book %>
+        </div>
+        
         <%= render "book_comments/form", book: @book, book_comment: @book_comment %>
       
       
