--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,47 +8,84 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ml-auto">
         <% if user_signed_in? %>
+        
+          <%# ホーム画面へ %>
           <li>
             <%= link_to user_path(current_user),class: 'nav-link text-light' do %>
               <i class="fas fa-home"></i> home
             <% end %>
           </li>
+          
+          <%# ユーザー一覧へ %>
           <li>
             <%=  link_to users_path,class: 'nav-link text-light' do %>
               <i class="fas fa-users"></i> users
             <% end %>
           </li>
+          
+          <%# 本の投稿一覧へ %>
           <li>
             <%=  link_to books_path ,class: 'nav-link text-light' do %>
               <i class="fas fa-book-open"></i> books
             <% end %>
           </li>
+          
+          <%# 通知機能 %>
+          <li class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Notification
+              <span class="badge badge-danger"><%= current_user.notifications.where(read: false).count %></span>
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+              <% if current_user.notifications.where(read: false).any? %>
+                <small class="dropdown-item disabled">直近5件の未読の通知を表示しています</small>
+                <% current_user.notifications.where(read: false).limit(5).order(created_at: :desc).each do |notification| %>
+                  <%= link_to notification.message, notification, method: :patch, class: "dropdown-item" %>
+                <% end %>
+              <% else %>
+                <span class="dropdown-item disabled">未読の通知はありません</span>
+              <% end %>
+            </div>
+          </li>
+          
+          
+          <%# ログアウト機能 %>
           <li>
             <%= link_to destroy_user_session_path, method: :delete,class: 'nav-link text-light' do %>
               <i class="fas fa-sign-out-alt"></i> log out
             <% end %>
           </li>
+          
         <% else %>
+        
+          <%# ホーム画面へ %>
           <li>
             <%= link_to root_path,class: 'nav-link text-light' do %>
               <i class="fas fa-home"></i> home
             <% end %>
           </li>
+          
+          <%# アバウト画面へ %>
           <li>
             <%= link_to home_about_path,class: 'nav-link text-light' do %>
               <i class="fas fa-link"></i> about
             <% end %>
           </li>
+          
+          <%# アカウント作成 %>
           <li>
             <%= link_to new_user_registration_path,class: 'nav-link text-light' do %>
               <i class="fas fa-user-plus"></i> signup
             <% end %>
           </li>
+          
+          <%# ログイン %>
           <li>
             <%= link_to new_user_session_path ,class: 'nav-link text-light' do %>
               <i class="fas fa-sign-in-alt"></i> login
             <% end %>
           </li>
+          
         <% end %>
         </ul>
       </div>
